--- a/Dark/resources/mobile.css
+++ b/Dark/resources/mobile.css
@@ -2,8 +2,8 @@
 
 /* Layout - set the page width and remove borders/padding on some common elements. */
 html {-webkit-text-size-adjust:none}
-body {font-size:12px}
-#hdr-content, #body-content, #ftr-content {min-width:0; padding:1px; max-width:none}
+body {font-size:13px; font-family: poppins,sans-serif;}
+#hdr-content, #body-content, #ftr-content {min-width:0; padding:1px; max-width:none;}
 .bodyHeader {padding:10px}
 .area {padding:0 10px}
 #body-content {border-left:0; border-right:0; border-radius:0}
@@ -13,10 +13,26 @@ body {font-size:12px}
     width: 100%;
   }
 
+embed {
+    width: 100%;
+  }
+
   .postBody img {
     vertical-align: bottom;
     min-width: 100%;
 }
+
+#loginSheet {
+    width: 100% !important;
+}
+
+.thing {margin-top: 1.5em;}
+
+.postHeader .info { margin-left:30px;}
+
+.conversationList .col-views {float:right; margin-right:-9.5em; width:14em; margin-top:0em}
+
+.conversationList .excerpt {font-size:100%; padding-top:5px; padding-bottom:5px}
 
 /* Header - center the title and float the buttons. */
 #hdr-content {padding:0 5px}
@@ -27,7 +43,7 @@ body {font-size:12px}
 #hdr .popupWrapper {float:right; margin:0 0 0 7px}
 #hdr #backButton {float:left; margin:13px 5px 0 5px}
 #userMenu {margin:0 !important; text-align:left; padding:0}
-#hdr #notifications {font-size:12px}
+#hdr #notifications {font-size:13px}
 
 
 /* Footer */
@@ -35,7 +51,7 @@ body {font-size:12px}
 
 
 /* Sheets - make them the right width and remove their border. */
-.sheet {width:100% !important; left:0 !important; border-radius:0; margin:0 !important}
+.sheet {width:100% !important; left:0 !important; border-radius:0; border:0; margin:0 !important}
 .sheet.active {border-width:0 0 1px; border-radius:0}
 .sheet.active .sheetContent {margin:0; border:0}
 .sheet.active {top:0}
@@ -89,13 +105,14 @@ body {font-size:12px}
 
 
 /* Conversation list */
-.conversationList li {padding:10px 10px 13px 30px; overflow:hidden}
+.conversationList li {padding:10px 13px 10px 30px; overflow:hidden}
 .conversationList .col-star {float:left; margin-left:-28px; margin-top:2px; margin-right:0; visibility:visible; padding-left:0.5em}
 .conversationList .col-conversation {display:block; margin:0 0 5px; width:auto}
-.conversationList .col-channel {display:block; padding-right:5px; margin:0; width:auto; text-align:left}
-.conversationList .col-lastPost {padding-right:0; width:auto; margin-right:0; float:none; display: inline-block}
-.conversationList .col-replies {float:right; margin:0; width:auto}
-.conversationList .col-replies span {font-size:12px}
+.conversationList .col-channel {display:block; padding-right:5px; margin:0; width:auto; text-align:left; float:left;}
+.conversationList .col-lastPost {padding-right:0; font-size:95%; width:auto; margin-right:0; float:none; display: inline-block}
+
+.conversationList .col-replies {float:right; margin-right:0em; width:auto}
+.conversationList .col-replies span {font-size:100%}
 .conversationList .title {font-size:120%}
 .conversationList .avatar {display:none}
 #conversationsFooter {padding:10px; margin:0}
@@ -138,12 +155,12 @@ body {font-size:12px}
 /* Make posts simple boxes with a thumbnail avatar. */
 .post {margin:10px; padding-left:0}
 .postContent:after, .postContent:before {display:none}
-.post div.avatar {margin:12px -5px 0 15px; position:relative; z-index:50}
-.post .avatar {width:20px; height:20px; line-height:20px; font-size:12px; vertical-align:middle}
+.post div.avatar {margin:6px -5px 0 10px; position:absolute; z-index:50}
+.post .avatar {width:25px; height:25px; line-height:20px; font-size:12px; vertical-align:middle}
 .postHeader [class*=profile-] {display:none}
 .post.edit .controls {float:none; margin-top:10px}
 .post .editButtons input {font-size:90%}
-.postBody {line-height:1.75em; font-size:12px}
+.postBody {line-height:1.75em; font-size:14px}
 
 
 /* Show controls by Dark, but hide unnecessary ones. */
