--- a/Dark/resources/styles.css
+++ b/Dark/resources/styles.css
@@ -9,7 +9,7 @@ here if necessary.
 /* The News Bubble
 ------------------------------------------------------------------------------------------------------------------------------- */
 
-
+.jumpToLast {color:#617177;}
 
 .triangle-border {
   position:relative;
@@ -60,7 +60,6 @@ embed {width: 75%;}
             background-size: 200% auto;
             color: white; 
             font-weight: 600;
-            border-radius: 10px;
             display: block;
           }
 
@@ -75,14 +74,6 @@ embed {width: 75%;}
 #hdr .link-newConversation {background-color:#23b636; color:#fff; border:0px; }
 #hdr .link-newConversation:hover {background-color:#2ea041; color:#fff; border:0px;}
 */
-
-/* Group Styles */
-  span.group-administrator {
-    color: #fff;
-    background-color: #E66B6B;
-    padding: 2px 10px 2px 10px;
-    border-radius: 2px;
-}
 
 /* ScrollToTop */
 .scrollToTop{
@@ -118,7 +109,7 @@ a:hover {text-decoration:none; color:#58a6ff}
 /* Signature */
 .signature {
     border-top:0px solid #eee;
-    font-size:11px;
+    font-size:95%;
     padding: 5px 12px;
     margin: 1px 0 0;
     color:#c9d1d9;
@@ -128,7 +119,7 @@ a:hover {text-decoration:none; color:#58a6ff}
 .signature p {margin-bottom:0}
 .signature-no-likes {
     border-top:0px solid #eee;
-    font-size:12px;
+    font-size:95%;
     padding: 5px 12px;
     margin:1px 0 0;
     color:#c9d1d9;
@@ -189,8 +180,8 @@ small {font-size:85%}
 
 
 /* Block styles */
-h1 {font-size:130%; font-weight:300}
-h2 {font-size:150%; font-weight:300}
+h1 {font-size:130%; font-weight:400}
+h2 {font-size:150%; font-weight:400}
 h3 {font-size:115%; font-weight:600}
 h4 {font-weight:600}
 p, ul, pre {line-height:1.5em}
@@ -198,8 +189,8 @@ p, ul, pre {line-height:1.5em}
 
 
 /* Sheets */
-.sheet, .area {background:#131a20}
-.sheet {margin:30px auto; width:600px; padding:1px; border:1px solid #d5d5d5}
+.sheet {background: #1b2228;}
+.sheet {margin:30px auto; width:600px; padding:1px; border:1px solid #d5d5d5; background: #1b2228;}
 .sheet.active {background:#131a20; border-radius:3px; box-shadow:0 5px 20px rgba(0, 0, 0, 0.2); top:80px; margin:0; z-index:200}
 .sheetOverlay {background:rgba(255, 255, 255, 0.9); z-index:150; position:fixed; top:0; left:0; bottom:0; right:0}
 
@@ -286,13 +277,16 @@ white-space: nowrap;}
 
 
 /* Unread indicators */
-.unreadIndicator {font-size: 12px;
-font-weight: 600;
-color: #e44;
-padding: 0px;
-border-radius: 3px;
+.unreadIndicator {color: #fff;
+background-color: #FD4C4C;
+padding: 1px 6px 1px 6px;
+border-radius: 6px;
+font-size: 12px;
 margin-right: 5px;}
 
+.notificationsList li.unread {
+  background-color: #213a46;
+}
 
 /* Channel list */
 #channelList {margin-top:-11px}
@@ -302,7 +296,7 @@ margin-right: 5px;}
 .channelList .description {font-size:85%; margin-top:10px; color:#888; margin-bottom:0}
 .channelList .stats {font-size:85%; margin-left:10px; color:#888}
 .channelList .channelControls {float:right; margin:-3px 0}
-.channelList .unsubscribed {background:#f5f5f5}
+.channelList .unsubscribed {background:#07111a}
 .channelList .unsubscribed .channel {opacity:0.75}
 .channelList .unsubscribed .description {color:#bbb}
 .channelList .button .text {display:none}
@@ -332,7 +326,7 @@ margin-right: 5px;}
 
 
 /* Post content (code, quotes, headers) */
-.postBody h4 {margin:1.2em 0 0.8em; font-size:130%; font-weight:normal}
+.postBody h4 {margin:1.2em 0 0.8em; font-size:130%;}
 
 blockquote {background: #1b2228; color: #6c8293; margin:0 -1px 1em; padding:5px 7px 1px 36px; position:relative; border-radius: 9px; border: 0px solid #0d419d;}
 blockquote cite {display:inline; font-style:normal; font-weight:bold; margin-right:5px}
@@ -352,8 +346,8 @@ code {background:#0e1317}
 
 
 /* Posts */
-.postHeader h3 {font-size:13px; font-weight:400}
-.postBody h4 {font-weight:300}
+.postHeader h3 {font-size:13px; font-weight:600}
+.postBody h4 {font-weight:400}
 .replyPlaceholder .postHeader h3 {font-weight:300}
 .postBody {line-height:1.5em; font-size:14px}
 .postBody a {font-weight:400; color:#03a9f4}
@@ -372,7 +366,7 @@ code {background:#0e1317}
 .colorSwatch {display:inline-block; height:21px; width:21px; border-radius:3px; margin-right:5px; vertical-align:-8px; border:1px solid rgba(0, 0, 0, 0.2)}
 
 
-.form input[type=text], .form input[type=password], .form input[type=number], .form input[type=email], .form select, .form textarea, .form .input {margin:0 3px 3px 0; width:260px; font-size:100%; padding:5px; color:#c9d1d9; border-radius:5px; background:#12151a;}
+.form input[type=text], .form input[type=password], .form input[type=number], .form input[type=email], .form select, .form textarea, .form .input {margin:0 3px 3px 0; width:260px; font-size:100%; color:#c9d1d9; background:#12151a; border: 1px solid #30363d}
 .form input.color {font-size:100%; padding:3px; width:60px}
 
 
@@ -395,7 +389,7 @@ code {background:#0e1317}
 
 
 /* Layout */
-#hdr-content, #body-content, #ftr-content {margin:0 auto; min-width:760px; max-width:1050px; padding:0 30px}
+#hdr-content, #body-content, #ftr-content {margin:0 auto; min-width:920px; max-width:1050px; padding:0 30px}
 #body-content, #ftr-content {background-color:#131a20}
 #body-content {padding-bottom:40px; padding-top:30px}
 #body {padding-top:50px}
@@ -442,8 +436,8 @@ code {background:#0e1317}
 /* Header */
 #hdr {background:#1b2228; position:fixed; width:100%; z-index:100; border-bottom:0px solid #21262d; padding-top: 5px;}
 #hdr-inner {padding-right:580px; white-space:nowrap}
-#hdr h1 {display:inline-block; max-width: 63%; font-size:20px; padding:10px 0; margin:0; font-weight:300; overflow:hidden; white-space:nowrap; text-overflow:ellipsis}
-#hdr h1 img {display:inline; vertical-align:-5px; margin-right:5px; border:0; width:65%}
+#hdr h1 {display:inline-block; max-width:62%; font-size:20px; padding:10px 0; margin: 0 -30px 0 0; font-weight:300; overflow:hidden; white-space:nowrap; text-overflow:ellipsis}
+#hdr h1 img {display:inline; vertical-align:-8px; margin-right:5px; border:0; width:65%}
 #hdr h1 span {margin-left:10px}
 #backButton {float:left; margin-right:10px; margin-left:-30px; font-size:20px; line-height:20px; margin-top:17px; text-decoration:none}
 
@@ -452,19 +446,6 @@ code {background:#0e1317}
 #userMenu .item-user {font-weight:600}
 #userMenu .item-user .avatar {vertical-align:middle; margin:-5px 8px -2px -5px}
 #userMenu.menu > li {margin-left:18px; text-align:left}
-
-#hdr .button {border-radius:4px; font-size:100%; padding:9px 12px; margin:-7px 0}
-#hdr #notifications {color:#c9d1d9}
-#hdr #notifications.new {color:red !important}
-
-
-/* Notifications button */
-#hdr .popupWrapper {margin:-5px 0; display:inline-block}
-#hdr .popupButton:hover {text-decoration:none}
-#hdr #notifications {color:#c9d1d9}
-#hdr #notifications.new, #hdr .active .popupButton {background-color:black; border-bottom-color:transparent}
-#hdr #notifications.new, #hdr .active .popupButton, #hdr .active .popupButton i {color:#c9d1d9 !important}
-#hdr .item-notifications {margin-right:-10px}
 
 
 /* Footer */
@@ -475,7 +456,7 @@ code {background:#0e1317}
 
 
 /* Text inputs */
-input[type=text], input[type=password], input[type=number], input[type=email], textarea, .input {font-weight:300; background:#12151a; border:1px solid #30363d; color:#c9d1d9; padding:5px; border-radius:3px; vertical-align:-1px; margin:0; -webkit-appearance:none}
+input[type=text], input[type=password], input[type=number], input[type=email], textarea, .input {font-weight:300; background:#12151a; border:1px solid #30363d; color:#c9d1d9; padding:5px; border-radius:50px; vertical-align:-1px; margin:0; -webkit-appearance:none}
 input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=number]:focus, input[type=email]:focus, .input:focus {outline:0px solid #666;}
 
 
@@ -531,7 +512,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
 .postHeader h3 {display:inline; margin:0}
 .postHeader h3, .postHeader h3 a {color:#000}
 .postHeader .info {display:inline}
-.postHeader .info > span, .postHeader .info > a {font-size:85%; margin-left:7px; color:#888}
+.postHeader .info > span, .postHeader .info > a {font-size:85%; margin-left:5px; color:#888}
 .postHeader .controls {float:right; margin-top:0px}
 
 .postBody {line-height:1.5em; overflow:auto; padding:15px 15px}
@@ -556,21 +537,25 @@ a.button.big {padding:10px; height:auto; line-height:1em}
 /******************************************/
 
 .channel.channel-1 {
+	 
   background:transparent;
   border-color: #ed2939 !important;
   color: #ed2939 !important;
 }
+
 .tabs li a.channel-1:hover {
 	background:transparent;
     border-color: #ed2939 !important;
     color: #ed2939 !important;
 }
 
+
 .channel.channel-3 {
 	background:transparent;
   border-color: #8e0 !important;
   color: #8e0 !important;
 }
+
 .tabs li a.channel-3:hover {
 	background:transparent;
     border-color: #8e0 !important;
@@ -582,6 +567,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
   border-color: #B59E8C !important;
   color: #B59E8C !important;
 }
+
 .tabs li a.channel-4:hover {
 	background:transparent;
     border-color: #B59E8C !important;
@@ -593,6 +579,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
   border-color: #4b93d1 !important;
   color: #4b93d1 !important;
 }
+
 .tabs li a.channel-5:hover {
 	background:transparent;
     border-color: #4b93d1 !important;
@@ -604,6 +591,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
   border-color: #9354ca !important;
   color: #9354ca !important;
 }
+
 .tabs li a.channel-6:hover {
 	background:transparent;
     border-color: #9354ca !important;
@@ -615,6 +603,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
   border-color: #ef564f !important;
   color: #ef564f !important;
 }
+
 .tabs li a.channel-7:hover {
 	background:transparent;
     border-color: #ef564f !important;
@@ -626,6 +615,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
   border-color: #FF8C00 !important;
   color: #FF8C00 !important;
 }
+
 .tabs li a.channel-8:hover {
 	background:transparent;
     border-color: #FF8C00 !important;
@@ -634,13 +624,13 @@ a.button.big {padding:10px; height:auto; line-height:1em}
 
 .channel.channel-9 {
 	background:transparent;
-  border-color: #FFCBA4 !important;
-  color: #FFCBA4 !important;
+  border-color: #3A935D !important;
+  color: #3A935D !important;
 }
 .tabs li a.channel-9:hover {
 	background:transparent;
-    border-color: #FFCBA4 !important;
-    color: #FFCBA4 !important;
+    border-color: #3A935D !important;
+    color: #3A935D !important;
 }
 
 .channel.channel-10 {
@@ -648,6 +638,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
   border-color: #00a8a8 !important;
   color: #00a8a8 !important;
 }
+
 .tabs li a.channel-10:hover {
 	background:transparent;
     border-color: #00a8a8 !important;
@@ -659,6 +650,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
   border-color: #FF1493 !important;
   color: #FF1493 !important;
 }
+
 .tabs li a.channel-11:hover {
 	background:transparent;
     border-color: #FF1493 !important;
@@ -670,6 +662,7 @@ a.button.big {padding:10px; height:auto; line-height:1em}
   border-color: #227093 !important;
   color: #227093 !important;
 }
+
 .tabs li a.channel-12:hover {
 	background:transparent;
     border-color: #227093 !important;
