--- a/base.css
+++ b/base.css
@@ -29,28 +29,6 @@ z-index order reference:
     margin:1px 0 0;
 }
 
-.ls-social li a.ls-social-fb {
-  background-position: 0 0;
-}
-
-.ls-social li a.ls-social-gplus {
-  background-position: -75px 0;
-}
-
-.ls-social li a.ls-social-twitter {
-  background-position: -50px 0;
-}
-.ls-social li a {
-  display: block;
-  width: 25px;
-  height: 25px;
-  background: url(http://livestreet.ru/uploads/social.png) no-repeat;
-    background-position-x: 0%;
-    background-position-y: 0%;
-}
-
-
-
 
 
 /* Footer Logo */
@@ -164,9 +142,9 @@ span.highlight {background:#fdef34; padding:1px 4px; border-radius:3px}
 /* Notifications button */
 #hdr .popupWrapper {margin:-5px 0; display:inline-block}
 #hdr .popupButton:hover {text-decoration:none}
-#hdr #notifications {color: rgba(153, 151, 151, 0.3)}
+#hdr #notifications {color: rgba(40, 40, 40, 0.3)}
 
-#hdr .button {border-radius:50px; font-size:100%; padding:9px 12px; margin:-7px 0}
+#hdr .button {border-radius:50px; font-size:100%; padding:8px 10px; margin:-7px 0}
 
 #hdr #notifications.new, #hdr .active .popupButton {background-color:#ff3c3c;}
 #hdr #notifications.new, #hdr .active .popupButton, #hdr .active .popupButton i {color:#fff !important}
@@ -235,7 +213,7 @@ span.highlight {background:#fdef34; padding:1px 4px; border-radius:3px}
 
 /* Avatars */
 .avatar {width:64px; height:64px; border-radius:3px; background:#eee; text-align:center; font-size:30px; line-height:64px; color:#bbb; display:inline-block}
-.avatar.thumb {width:20px; height:20px; font-size:13px; line-height:18px; vertical-align:middle}
+.avatar.thumb {width:20px; height:20px; font-size:13px; line-height:20px; vertical-align:middle}
 .avatar.start {width:30px; height:30px; font-size:13px; line-height:24px; vertical-align:middle;}
 
 /* Messages */
@@ -324,7 +302,7 @@ span.highlight {background:#fdef34; padding:1px 4px; border-radius:3px}
 
 /* Generic lists */
 .list {margin:0; border-bottom:1px solid #e1e1e1; line-height:1.5em; padding:0; list-style-type:none}
-.list > li {border:solid #e1e1e1; border-width:1px 0; padding:12px 12px; margin:-1px 0}
+.list > li {border:solid #e1e1e1; border-width:1px 0; padding:10px 10px; margin:-1px 0}
 .list > li:hover {background-color:#f6f6f6}
 .list .controls {visibility:hidden}
 .list > li:hover .controls {visibility:visible}
@@ -337,7 +315,7 @@ span.highlight {background:#fdef34; padding:1px 4px; border-radius:3px}
 /* Tabs */
 .tabs {margin:0; padding:1px; line-height:1em; overflow:hidden}
 .tabs li {float:left; list-style-type:none; margin:4px 7px 4px 0}
-.tabs li > a, .tabs li > span {padding:5px 7px; white-space:nowrap; font-size:85%; display:block}
+.tabs li > a, .tabs li > span {padding:5px 7px; white-space:nowrap; font-size:90%; display:block}
 .tabs li > a {color:#666; cursor:pointer; border-radius:5px}
 .tabs li > span {color:#666}
 .tabs li a:hover {border:1px solid #eee; margin:-1px; text-decoration:none; border-radius:5px}
@@ -360,7 +338,7 @@ span.highlight {background:#fdef34; padding:1px 4px; border-radius:3px}
 .tabs .pathEnd.selected a:last-child:before, .tabs .pathEnd.selected a:last-child:after {display:none}
 
 /* Channels */
-.channel {background:#fff; text-decoration:none; color:#666; text-shadow:none; border-radius:3px; font-size:85%; border:1px solid #ddd; white-space:nowrap; padding:2px 5px}
+.channel {background:transparent; text-decoration:none; color:#666; text-shadow:none; border-radius:3px; font-size:85%; border:1px solid #ddd; white-space:nowrap; padding:2px 5px}
 a.channel:hover {text-decoration:none; border-color:#aaa}
 
 
@@ -587,7 +565,7 @@ a.deleteLink:hover {color:#f00 !important; text-decoration:line-through}
 .postHeader .controls {float:right; margin-top:0px}
 
 .postBody {line-height:1.5em; overflow:auto; padding:0px 15px}
-.postBody img {vertical-align:bottom; max-width:100%; border: 1px solid #30363d;}
+.postBody img {vertical-align:bottom; max-width:80%; border: 1px solid #30363d;}
 .postBody ul {list-style-type:disc}
 .postBody b {
   font-weight: 600;
@@ -750,7 +728,7 @@ input.error, input.error:focus {border-color:#f59e79 !important}
 
 .form input[type=text], .form input[type=password], .form input[type=number], .form input[type=email], .form select, .form textarea, .form .input {margin:0 3px 3px 0; width:260px; font-size:110%; border: 1px solid;border-radius: 20px !important; outline: 0;
 box-sizing: border-box; padding: 6px 12px;}
-.form input.color {font-size:100%; padding:3px; width:60px}
+.form input.color {font-size:100%; padding:3px; width:70px}
 
 
 /* Buttons */
